15 October 2007: Wouter
	- nicer warning.
	- fix IP6 TCP, wrong definition check. With test package.
	- fixup the fact that the query section was not compressed to,
	  the code was there but was called by value instead of by reference.
	  And test for the case, uses xxd and nc.
	- more portable ip6 check for sockaddr types.

8 October 2007: Wouter
	- --disable-rpath option in configure for 64bit systems with
	  several dynamic lib dirs.

7 October 2007: Wouter
	- fixup tests for no AD bit in non-DO queries.
	- test that makes sure AD bit is not set on non-DO query.

6 October 2007: Wouter
	- removed logfile open early. It did not have the proper permissions;
	  it was opened as root instead of the user. And we cannot change user
	  id yet, since chroot and bind ports need to be done.
	- callback checks for event callbacks done from mini_event. Because
	  of deletions cannot do this from netevent. This means when using
	  libevent the protection does not work on event-callbacks.
	- fixup too small reply (did not zero counts).
	- fixup reply no longer AD bit when query without DO bit.

5 October 2007: Wouter
	- function pointer whitelist.

4 October 2007: Wouter
	- overwrite sensitive random seed value after use.
	- switch to logfile very soon if not -d (console attached).
	- error messages do not reveal the trustanchor contents.
	- start work on function pointer whitelists.

3 October 2007: Wouter
	- fix for multiple empty nonterminals, after multiple DSes in the
	  chain of trust.
	- mesh checks if modules are looping, and stops them.
	- refetch with CNAMEd nameserver address regression test added.
	- fixup line count bug in testcode, so testbound prints correct line
	  number with parse errors.
	- unit test for multiple ENT case.
	- fix for cname out of validated unsec zone.
	- fixup nasty id=0 reuse. Also added assertions to detect its
	  return (the assertion catches in the existing test cases).

1 October 2007: Wouter