@@ -61,11 +61,13 @@ write_socket(int s, const void *buf, size_t size)
         const char* data = (const char*)buf;
         size_t total_count = 0;
 
+	fd_set_block(s);
         while (total_count < size) {
                 ssize_t count
                         = write(s, data + total_count, size - total_count);
                 if (count == -1) {
                         if (errno != EAGAIN && errno != EINTR) {
+				fd_set_nonblock(s);
                                 return 0;
                         } else {
                                 continue;
@@ -73,6 +75,7 @@ write_socket(int s, const void *buf, size_t size)
                 }
                 total_count += count;
         }
+	fd_set_nonblock(s);
         return 1;
 }
 
@@ -87,6 +90,22 @@ fd_set_nonblock(int s)
 	flag |= O_NONBLOCK;
 	if(fcntl(s, F_SETFL, flag) == -1) {
 		log_err("can't fcntl F_SETFL: %s", strerror(errno));
+		return 0;
+	}
+	return 1;
+}
+
+int 
+fd_set_block(int s) 
+{
+	int flag;
+	if((flag = fcntl(s, F_GETFL)) == -1) {
+		log_err("cannot fcntl F_GETFL: %s", strerror(errno));
+		flag = 0;
+	}
+	flag &= ~O_NONBLOCK;
+	if(fcntl(s, F_SETFL, flag) == -1) {
+		log_err("cannot fcntl F_SETFL: %s", strerror(errno));
 		return 0;
 	}
 	return 1;
